lib/gen/flmln_bindings.dart


  void flmln_renderer_frontend_set_invalidate_callback(
    flmln_renderer_frontend_t _rendererFrontend,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> invalidateCallback,
  ) {
    return _flmln_renderer_frontend_set_invalidate_callback(
      _rendererFrontend,
      invalidateCallback,
    );
  }

  late final _flmln_renderer_frontend_set_invalidate_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(flmln_renderer_frontend_t, ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>)
        >
      >('flmln_renderer_frontend_set_invalidate_callback');
  late final _flmln_renderer_frontend_set_invalidate_callback = _flmln_renderer_frontend_set_invalidate_callbackPtr
      .asFunction<void Function(flmln_renderer_frontend_t, ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>)>();

  mbgl_camera_options_t mbgl_camera_options_create() {
    return _mbgl_camera_options_create();
  }

  late final _mbgl_camera_options_createPtr = _lookup<ffi.NativeFunction<mbgl_camera_options_t Function()>>(
    'mbgl_camera_options_create',
  );
  late final _mbgl_camera_options_create = _mbgl_camera_options_createPtr
      .asFunction<mbgl_camera_options_t Function()>();

  void mbgl_camera_options_destroy(
    mbgl_camera_options_t _cameraOptions,
  ) {
    return _mbgl_camera_options_destroy(
      _cameraOptions,
    );
  }

  late final _mbgl_camera_options_destroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_camera_options_t)>>(
    'mbgl_camera_options_destroy',
  );
  late final _mbgl_camera_options_destroy = _mbgl_camera_options_destroyPtr
      .asFunction<void Function(mbgl_camera_options_t)>();

  void mbgl_camera_options_set_center(
    mbgl_camera_options_t _cameraOptions,
    double latitude,
    double longitude,
  ) {
    return _mbgl_camera_options_set_center(
      _cameraOptions,
      latitude,
      longitude,
    );
  }

  late final _mbgl_camera_options_set_centerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_camera_options_t, ffi.Double, ffi.Double)>>(
        'mbgl_camera_options_set_center',
      );
  late final _mbgl_camera_options_set_center = _mbgl_camera_options_set_centerPtr
      .asFunction<void Function(mbgl_camera_options_t, double, double)>();

  void mbgl_camera_options_set_zoom(
    mbgl_camera_options_t _cameraOptions,
    double zoom,
  ) {
    return _mbgl_camera_options_set_zoom(
      _cameraOptions,
      zoom,
    );
  }

  late final _mbgl_camera_options_set_zoomPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_camera_options_t, ffi.Double)>>('mbgl_camera_options_set_zoom');
  late final _mbgl_camera_options_set_zoom = _mbgl_camera_options_set_zoomPtr
      .asFunction<void Function(mbgl_camera_options_t, double)>();

  void mbgl_camera_options_set_bearing(
    mbgl_camera_options_t _cameraOptions,
    double bearing,
  ) {
    return _mbgl_camera_options_set_bearing(
      _cameraOptions,
      bearing,
    );
  }

  late final _mbgl_camera_options_set_bearingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_camera_options_t, ffi.Double)>>(
        'mbgl_camera_options_set_bearing',
      );
  late final _mbgl_camera_options_set_bearing = _mbgl_camera_options_set_bearingPtr
      .asFunction<void Function(mbgl_camera_options_t, double)>();

  void mbgl_camera_options_set_pitch(
    mbgl_camera_options_t _cameraOptions,
    double pitch,
  ) {
    return _mbgl_camera_options_set_pitch(
      _cameraOptions,
      pitch,
    );
  }

  late final _mbgl_camera_options_set_pitchPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_camera_options_t, ffi.Double)>>(
        'mbgl_camera_options_set_pitch',
      );
  late final _mbgl_camera_options_set_pitch = _mbgl_camera_options_set_pitchPtr
      .asFunction<void Function(mbgl_camera_options_t, double)>();

  mbgl_map_t mbgl_map_create(
    flmln_renderer_frontend_t _rendererFrontend,
    flmln_map_observer_t _mapObserver,
    mbgl_map_options_t _mapOptions,
    mbgl_resource_options_t _resourceOptions,
  ) {
    return _mbgl_map_create(
      _rendererFrontend,
      _mapObserver,
      _mapOptions,
      _resourceOptions,
    );
  }

  late final _mbgl_map_createPtr =
      _lookup<
        ffi.NativeFunction<
          mbgl_map_t Function(
            flmln_renderer_frontend_t,
            flmln_map_observer_t,
            mbgl_map_options_t,
            mbgl_resource_options_t,
          )
        >
      >('mbgl_map_create');
  late final _mbgl_map_create = _mbgl_map_createPtr
      .asFunction<
        mbgl_map_t Function(
          flmln_renderer_frontend_t,
          flmln_map_observer_t,
          mbgl_map_options_t,
          mbgl_resource_options_t,
        )
      >();

  void mbgl_map_destroy(
    mbgl_map_t map,
  ) {
    return _mbgl_map_destroy(
      map,
    );
  }

  late final _mbgl_map_destroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_t)>>('mbgl_map_destroy');
  late final _mbgl_map_destroy = _mbgl_map_destroyPtr.asFunction<void Function(mbgl_map_t)>();

  void mbgl_map_style_load_url(
    mbgl_map_t _map,
    ffi.Pointer<ffi.Char> url,
  ) {
    return _mbgl_map_style_load_url(
      _map,
      url,
    );
  }

  late final _mbgl_map_style_load_urlPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_t, ffi.Pointer<ffi.Char>)>>('mbgl_map_style_load_url');
  late final _mbgl_map_style_load_url = _mbgl_map_style_load_urlPtr
      .asFunction<void Function(mbgl_map_t, ffi.Pointer<ffi.Char>)>();

  void mbgl_map_jump_to(
    mbgl_map_t _map,
    mbgl_camera_options_t _cameraOptions,
  ) {
    return _mbgl_map_jump_to(
      _map,
      _cameraOptions,
    );
  }

  late final _mbgl_map_jump_toPtr = _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_t, mbgl_camera_options_t)>>(
    'mbgl_map_jump_to',
  );
  late final _mbgl_map_jump_to = _mbgl_map_jump_toPtr.asFunction<void Function(mbgl_map_t, mbgl_camera_options_t)>();

  void mbgl_map_set_size(
    mbgl_map_t _map,
    int width,
    int height,
  ) {
    return _mbgl_map_set_size(
      _map,
      width,
      height,
    );
  }

  late final _mbgl_map_set_sizePtr = _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_map_t, ffi.Uint32, ffi.Uint32)>>(
    'mbgl_map_set_size',
  );
  late final _mbgl_map_set_size = _mbgl_map_set_sizePtr.asFunction<void Function(mbgl_map_t, int, int)>();

  mbgl_style_t mbgl_map_get_style(
    mbgl_map_t _map,
  ) {
    return _mbgl_map_get_style(
      _map,
    );
  }

  late final _mbgl_map_get_stylePtr = _lookup<ffi.NativeFunction<mbgl_style_t Function(mbgl_map_t)>>(
    'mbgl_map_get_style',
  );
  late final _mbgl_map_get_style = _mbgl_map_get_stylePtr.asFunction<mbgl_style_t Function(mbgl_map_t)>();

  mbgl_style_layer_t mbgl_style_get_layer(
    mbgl_style_t _style,
    ffi.Pointer<ffi.Char> layerId,
  ) {
    return _mbgl_style_get_layer(
      _style,
      layerId,
    );
  }

  late final _mbgl_style_get_layerPtr =
      _lookup<ffi.NativeFunction<mbgl_style_layer_t Function(mbgl_style_t, ffi.Pointer<ffi.Char>)>>(
        'mbgl_style_get_layer',
      );
  late final _mbgl_style_get_layer = _mbgl_style_get_layerPtr
      .asFunction<mbgl_style_layer_t Function(mbgl_style_t, ffi.Pointer<ffi.Char>)>();

  void mbgl_style_background_layer_set_background_color(
    mbgl_style_layer_t _layer,
    ffi.Pointer<ffi.Char> color,
  ) {
    return _mbgl_style_background_layer_set_background_color(
      _layer,
      color,
    );
  }

  late final _mbgl_style_background_layer_set_background_colorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mbgl_style_layer_t, ffi.Pointer<ffi.Char>)>>(
        'mbgl_style_background_layer_set_background_color',
      );
  late final _mbgl_style_background_layer_set_background_color = _mbgl_style_background_layer_set_background_colorPtr
      .asFunction<void Function(mbgl_style_layer_t, ffi.Pointer<ffi.Char>)>();

  void flmln_utils_run_loop_once() {
    return _flmln_utils_run_loop_once();
  }

  late final _flmln_utils_run_loop_oncePtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'flmln_utils_run_loop_once',
  );
  late final _flmln_utils_run_loop_once = _flmln_utils_run_loop_oncePtr.asFunction<void Function()>();
}

typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;
typedef __darwin_ct_rune_t = ffi.Int;
typedef Dart__darwin_ct_rune_t = int;

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

typedef __darwin_mbstate_t = __mbstate_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef __darwin_size_t = ffi.UnsignedLong;
typedef Dart__darwin_size_t = int;
typedef __builtin_va_list = ffi.Pointer<ffi.Char>;
typedef __darwin_va_list = __builtin_va_list;
typedef __darwin_wchar_t = ffi.Int;
typedef Dart__darwin_wchar_t = int;
typedef __darwin_rune_t = __darwin_wchar_t;
typedef __darwin_wint_t = ffi.Int;
typedef Dart__darwin_wint_t = int;
typedef __darwin_clock_t = ffi.UnsignedLong;
typedef Dart__darwin_clock_t = int;
typedef __darwin_socklen_t = __uint32_t;
typedef __darwin_ssize_t = ffi.Long;
typedef Dart__darwin_ssize_t = int;
typedef __darwin_time_t = ffi.Long;
typedef Dart__darwin_time_t = int;
typedef __darwin_blkcnt_t = __int64_t;
typedef __darwin_blksize_t = __int32_t;
typedef __darwin_dev_t = __int32_t;
typedef __darwin_fsblkcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsblkcnt_t = int;
typedef __darwin_fsfilcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsfilcnt_t = int;
typedef __darwin_gid_t = __uint32_t;
typedef __darwin_id_t = __uint32_t;
typedef __darwin_ino64_t = __uint64_t;
typedef __darwin_ino_t = __darwin_ino64_t;
typedef __darwin_mach_port_name_t = __darwin_natural_t;
typedef __darwin_mach_port_t = __darwin_mach_port_name_t;
typedef __darwin_mode_t = __uint16_t;
typedef __darwin_off_t = __int64_t;
typedef __darwin_pid_t = __int32_t;
typedef __darwin_sigset_t = __uint32_t;
typedef __darwin_suseconds_t = __int32_t;
typedef __darwin_uid_t = __uint32_t;
typedef __darwin_useconds_t = __uint32_t;

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>> __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}
